--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,11 @@ body {
   background-color: #0e141b;
   font-family: "Lato", sans-serif;
 }
+
+:root {
+  --border-radius: 8px;
+  --padding: 2rem;
+
+  /* Colors */
+  --bg-blue200: #1c2c35;
+}
