--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 2.75rem 1.5rem;
+  padding: 2.75rem 1.5rem 0 1.5rem;
   color: #ecf8ff;
 }
 
