--- a/components/NewsletterForm/NewsletterForm.module.css
+++ b/components/NewsletterForm/NewsletterForm.module.css
@@ -41,74 +41,13 @@
 .newsletter__input {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 1rem;
 }
 
 @media screen and (max-width: 768px) {
   .newsletter__input {
     flex-direction: column;
-  }
-}
-
-.newsletter__input > input {
-  flex: 1;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid #ffffff42;
-  outline: none;
-  color: #ffffff;
-  padding: 0.5rem 0.8rem;
-  border-radius: 6px;
-  font-size: 17px;
-}
-
-.newsletter__input > input::placeholder {
-  color: #cacaca;
-}
-
-.newsletter__input > button {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #ffffff;
-}
-
-.newsletter__input > button {
-  background: linear-gradient(-45deg, #3f00b5, #9f69fe, #27c8b7, #3f00b5);
-  background-size: 800% 400%;
-  padding: 1em 2em;
-  display: inline-block;
-  border: none;
-  border-radius: 10px;
-  font-size: 17px;
-  font-weight: 700;
-  color: white;
-  transition: all 0.1s ease-in-out;
-  animation: gradient 10s infinite cubic-bezier(0.62, 0.28, 0.23, 0.99) both;
-}
-
-.newsletter__input > button:hover {
-  transform: scale(1.03);
-}
-
-.newsletter__input > button:active {
-  transform: scale(0.95);
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
+    align-items: stretch;
   }
 }
