--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   gap: 1.25rem;
 
-  max-width: 769px;
+  max-width: 768px;
   margin: 0 auto;
   padding: 1.5rem 1.5rem;
 
@@ -32,7 +32,7 @@
 
 @media screen and (min-width: 768px) {
   .footer {
-    padding: 3.75rem 0;
+    padding: 3rem 1.5rem;
     flex-direction: row;
     align-items: center;
   }
